# insightchat

./: .dockerignore  .env.docker.example  .env.example  .gitignore  CALENDAR_INTELLIGENCE_MIGRATION.md  DOCKER-SETUP.md  DOCKER.md  Dockerfile  IMAGE_DISPLAY_QUICKREF.md  IMAGE_DISPLAY_SOLUTION.md  IMPLEMENTATION_SUMMARY.md  Makefile  QUICKSTART_TOOLS.md  README.md  TOOLS.md  TTS_ENGINE_PARAMETER.md  VOICE_API.md  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  test_rag.py  test_tools.py  test_voice_api.py
.github/agents/: copilot-instructions.md
.specify/memory/: constitution.md
calendar-intelligence/: INTEGRATION_GUIDE.md  README.md  USAGE_EXAMPLES.md  pyproject.toml  test_library.py
calendar-intelligence/src/calendar_intelligence/: __init__.py  analyzer.py  formatter.py  intent.py
calendar-intelligence/src/calendar_intelligence/repositories/: __init__.py  base.py  ics.py
flask-chat-app/: .env.example  README.md  requirements.txt
flask-chat-app/src/: app.py
flask-chat-app/src/chat/: __init__.py  config.py  document_processor.py  routes.py  tool_router.py  utils.py  whisper_client.py
flask-chat-app/src/config/: __init__.py
flask-chat-app/templates/: base.html  chat.html
flask-chat-app/templates/components/: message.html
specs/001-jupyter-notebook-support/: IMPLEMENTATION_COMPLETE.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-jupyter-notebook-support/checklists/: requirements.md
specs/001-jupyter-notebook-support/contracts/: output-notebook.ipynb  (+1 more)
(+7 files in other folders)
