[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "calendar-intelligence"
version = "0.1.0"
description = "Reusable calendar analysis and intelligence library with pluggable data sources"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "InsightChat Team"},
]
dependencies = [
    "requests>=2.31.0",
    "python-dateutil>=2.8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/calendar_intelligence"]
